<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vox_color_background"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/conversationHeader"
        layout="@layout/layout_conversation_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messagesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/vox_spacing_12"
        android:paddingTop="@dimen/vox_spacing_12"
        android:paddingBottom="@dimen/vox_spacing_8"
        app:layout_constraintBottom_toTopOf="@id/inputRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conversationHeader" />

    <LinearLayout
        android:id="@+id/inputRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/vox_color_surface"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/vox_spacing_12"
        android:paddingVertical="@dimen/vox_spacing_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/attachmentButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/conversation_attachment_action"
            android:src="@android:drawable/ic_menu_add" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/messageInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/vox_spacing_8"
            android:layout_weight="1"
            android:hint="@string/conversation_input_hint"
            app:boxBackgroundColor="@color/vox_color_surface"
            app:boxStrokeColor="@color/vox_color_border"
            app:hintTextColor="@color/vox_color_subtle_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/messageInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="4"
                android:minHeight="40dp"
                android:textColor="@color/vox_color_on_surface"
                android:textColorHint="@color/vox_color_subtle_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/vox_spacing_8"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/conversation_send_action"
            android:src="@drawable/ic_send_24"
            android:tint="@color/vox_color_primary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
